--- a/test/e2e/mock-ep-app/index.html
+++ b/test/e2e/mock-ep-app/index.html
@@ -1,3 +1,13 @@
-<!-- inject_css -->
-<script src="entry.js"></script>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <title>easepack test</title>
+  <!-- inject_css -->
+</head>
+<body>
+<div id="app"></div>
 <img src="./image1.png">
+<script src="entry.js"></script>
+</body>
+</html>
