--- a/test/e2e/mock-ep-app/index.html
+++ b/test/e2e/mock-ep-app/index.html
@@ -6,8 +6,10 @@
   <!-- inject_css -->
 </head>
 <body>
+<div id="slide">
+  <img src="./image1.png">
+</div>
 <div id="app"></div>
-<img src="./image1.png">
 <script src="entry.js"></script>
 </body>
 </html>
