--- a/test/e2e/mock-ep-app/index.html
+++ b/test/e2e/mock-ep-app/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
   <title>easepack test</title>
-  <!-- inject_css -->
+  <!-- <script src="entry.js"></script> -->
+  <!--[if IE 7]><script src="entry.js"></script><![endif]-->
 </head>
 <body>
 <div id="slide">
@@ -11,5 +13,6 @@
 </div>
 <div id="app"></div>
 <script src="entry.js"></script>
+<script src="entry_not_exist.js"></script>
 </body>
 </html>
