--- a/test/e2e/mock-ep-app/index.html
+++ b/test/e2e/mock-ep-app/index.html
@@ -14,5 +14,8 @@
 <div id="app"></div>
 <script src="entry.js"></script>
 <script src="entry_not_exist.js"></script>
+<% if(process.env.NODE_ENV == 'm1') { %>
+<div>NODE_ENV为m1</div>
+<% } %>
 </body>
 </html>
