require in html

--- a/test/e2e/mock-ep-app/index.html
+++ b/test/e2e/mock-ep-app/index.html
@@ -15,7 +15,7 @@
 <script src="entry.js"></script>
 <script src="entry_not_exist.js"></script>
 <% if(process.env.NODE_ENV == 'm1') { %>
-<div>NODE_ENV为m1</div>
+<div>NODE_ENV为'm1'</div>
 <% } %>
 </body>
 </html>
