--- a/test/e2e/mock-ep-app/filepath/file.html
+++ b/test/e2e/mock-ep-app/filepath/file.html
@@ -5,8 +5,7 @@
 {% endblock %}
 
 {% block js %}
-  <script src="entry.js"></script>
-  <script src="entry2.js"></script>
+  <script src="../entry.js"></script>
 {% endblock %}
 
 <head>
@@ -15,5 +14,4 @@
 
 <body>
 <div id="app"></div>
-<div><%= require('./filepath/filePath.sac') %></div>
 </body>
