--- a/test/e2e/mock-ep-app/filepath/file.html
+++ b/test/e2e/mock-ep-app/filepath/file.html
@@ -5,6 +5,7 @@
 {% endblock %}
 
 {% block js %}
+  <script src="./file.js"></script>
   <script src="../entry.js"></script>
 {% endblock %}
 
@@ -14,4 +15,5 @@
 
 <body>
 <div id="app"></div>
+<img src="./image1.png">
 </body>
