--- a/test/e2e/mock-ep-app-rc/index.html
+++ b/test/e2e/mock-ep-app-rc/index.html
@@ -6,7 +6,9 @@
   <title>easepack test</title>
 </head>
 <body>
-<div id="app"></div>
+<div id="app">
+  <h1 class="bs loading1"></h1>
+</div>
 <script src="entry.js"></script>
 </body>
 </html>
