absulte path bug

--- a/test/e2e/mock-ep-app/index.html
+++ b/test/e2e/mock-ep-app/index.html
@@ -9,9 +9,12 @@
 </head>
 <body>
 <div id="slide">
+  <img src="">
+  <img src=" ">
   <img src="./image1.png">
   <img src="./image1.png?__inline">
   <img src="<%= require('./image1.png') %>">
+  <img src="http://cc.cottage.netease.com/nsep/headicon/builtin/23">
 </div>
 <div id="app"></div>
 <script src="entry.js"></script>
