fix html resolve url bug

--- a/test/e2e/mock-ep-app/index.html
+++ b/test/e2e/mock-ep-app/index.html
@@ -12,6 +12,7 @@
   <img src="">
   <img src=" ">
   <img src="./image1.png">
+  <img src="./image2.png">
   <img src="./image1.png?__inline">
   <img src="<%= require('./image1.png') %>">
   <img src="http://cc.cottage.netease.com/nsep/headicon/builtin/23">
