--- a/test/e2e/mock-ep-app/list.html
+++ b/test/e2e/mock-ep-app/list.html
@@ -5,6 +5,7 @@
 {% endblock %}
 
 {% block js %}
+  <script src="http://cc.cottage.netease.com/nsep/headicon/builtin/23"></script>
   <script src="entry.js"></script>
   <script src="entry2.js"></script>
 {% endblock %}
