testcases: html require js url

--- a/test/e2e/mock-ep-app-rc/index.html
+++ b/test/e2e/mock-ep-app-rc/index.html
@@ -10,5 +10,6 @@
   <h1 class="bs loading1"></h1>
 </div>
 <script src="entry.js"></script>
+<script src="extlibs/libs.js"></script>
 </body>
 </html>
