--- a/test/e2e/mock-ep-app/index.html
+++ b/test/e2e/mock-ep-app/index.html
@@ -19,7 +19,7 @@
 </div>
 <div id="app"></div>
 <script src="entry.js"></script>
-<script src="entry_not_exist.js"></script>
+<script src="entry_not_exist.js" crossorigin="anonymous"></script>
 
 <% if(process.env.NODE_ENV == 'm1') { %>
   <div>NODE_ENV为'm1'</div>
