--- a/test/e2e/mock-ep-app-rc/index.html
+++ b/test/e2e/mock-ep-app-rc/index.html
@@ -9,7 +9,8 @@
 <div id="app">
   <h1 class="bs loading1"></h1>
 </div>
-<script src="entry.js" crossorigin="anonymous"></script>
+<script src="entry.js" crossorigin="anonymous" async></script>
 <script src="extlibs/libs.js"></script>
+<script src="extlibs/libs2.js?query"></script>
 </body>
 </html>
